[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "A sandbox environment with Jupyter Lab and LangChain tools."
authors = ["Aleksei Solovev"]

[tool.poetry.dependencies]
python = "^3.11"
black = "==25.1.0"
chromadb = "==1.0.5"
isort = "==6.0.1"
jupyterlab = "==4.4.0"
jupyterlab-code-formatter = "==3.0.2"
langchain-community = "==0.3.21"
langchain-experimental = "==0.3.4"
langchain-google-genai = "==2.1.3"
langgraph = "^0.5.4"
langgraph-checkpoint-sqlite = "==2.0.6"
langgraph-supervisor = "==0.0.26"
pandas = "==2.2.3"
pygraphviz = "==1.14"
pypdf = "==5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"